--- a/index.html
+++ b/index.html
@@ -1,17 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>City</title>
 </head>
+
 <body>
     <h1>Gence</h1>
     <img src="Gence.jpg" alt="" width="150">
-    <p>Müasir ərəb tarixşünasları "Gəncə" adının ərəb dilindəki farsca kökənli xəzinə anlamlı "kənz" sözündən gəldiyini irəli sürürlər. Ərəb coğrafiyaşünası İbn Havqəl 977-ci ildə "Gəncə gözəl, varlı və qələbəlik şəhəridir. Buranın çoxsaylı əhalisi səxavətinə, mehribanlığına, elm adamlarına və mühacirlərə hörmətli münasibətlərinə görə fərqlənirlər" yazmışdır.[2]
+    <p>Müasir ərəb tarixşünasları "Gəncə" adının ərəb dilindəki farsca kökənli xəzinə anlamlı "kənz" sözündən gəldiyini
+        irəli sürürlər. Ərəb coğrafiyaşünası İbn Havqəl 977-ci ildə "Gəncə gözəl, varlı və qələbəlik şəhəridir. Buranın
+        çoxsaylı əhalisi səxavətinə, mehribanlığına, elm adamlarına və mühacirlərə hörmətli münasibətlərinə görə
+        fərqlənirlər" yazmışdır.[2]
 
-        Fərrux Əhmədov Gəncə şəhərinin adının türk mənşəli olduğunu irəli sürür və ilkin forması hesab etdiyi "Qança" sözünün ilk komponenti "qan", "kan", "kaan", "xan" sözlərini türk dillərində hakim, sərkərdə, başçı, ikinci hissəsi olan –ca şəkilçisini isə məkan, yer, yurd kimi izah edir. Beləliklə, "Gəncə", "Qanca", "Kancə" sözləri "xan yeri", "xan məkanı","xan yurdu", "xanın, xaqanın oturduğu yer" anlamını verir. Müəllif bildirir ki, XX əsrin əvvəlinə kimi "Qanja" və "Xan yurt" adları yerli əhalinin dilində Gəncənin cənub hissəsindəki dağlıq yerlərdə saxlanmışdı"</p>
-        <p>dzayner Huriyye xanim</p>
-        
+        Fərrux Əhmədov Gəncə şəhərinin adının türk mənşəli olduğunu irəli sürür və ilkin forması hesab etdiyi "Qança"
+        sözünün ilk komponenti "qan", "kan", "kaan", "xan" sözlərini türk dillərində hakim, sərkərdə, başçı, ikinci
+        hissəsi olan –ca şəkilçisini isə məkan, yer, yurd kimi izah edir. Beləliklə, "Gəncə", "Qanca", "Kancə" sözləri
+        "xan yeri", "xan məkanı","xan yurdu", "xanın, xaqanın oturduğu yer" anlamını verir. Müəllif bildirir ki, XX
+        əsrin əvvəlinə kimi "Qanja" və "Xan yurt" adları yerli əhalinin dilində Gəncənin cənub hissəsindəki dağlıq
+        yerlərdə saxlanmışdı"</p>
+    <p>dzayner Huriyye xanim</p>
+
 </body>
+
 </html>
