--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         "xan yeri", "xan məkanı","xan yurdu", "xanın, xaqanın oturduğu yer" anlamını verir. Müəllif bildirir ki, XX
         əsrin əvvəlinə kimi "Qanja" və "Xan yurt" adları yerli əhalinin dilində Gəncənin cənub hissəsindəki dağlıq
         yerlərdə saxlanmışdı"</p>
-    <p>dzayner Huriyye xanim</p>
+    <p>dizayner Huriyya &copy;2023</p>
 
 </body>
 
